2009-09-10  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 2849731:
    * source/org/jfree/chart/DatasetUtilities.java
    (iterateRangeBounds(CategoryDataset, boolean)): For IntervalCategoryDataset
    look at regular value, and account for nulls.

2009-09-10  David Gilbert  <david.gilbert@object-refinery.com>

    Bug fix by Jim Goodwin:
    * source/org/jfree/chart/MouseWheelHandler.java
    (handleZoomable): Respect domain/rangeZoomable fields in ChartPanel.

2009-09-04  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 2850344 by Martin Hoeller:
    * source/org/jfree/chart/plot/PolarPlot.java
    (margin): New field,
    (PolarPlot): Initialise new field,
    (getMargin): New method,
    (setMargin): Likewise,
    (refreshAngleTicks): Set label anchors according to angle,
    (draw): Use margin attribute,
    (equals): Updated for margin,
    (translateValueThetaRadiusToJava2D): Use new margin attribute,
    * source/org/jfree/chart/renderer/DefaultPolarRenderer.java
    (drawOutlineWhenFilled): New attribute,
    (fillComposite): Likewise,
    (shapesVisible): Likewise,
    (DefaultPolarItemRenderer): Initialise new fields,
    (drawSeries): Use new attributes,
    (drawAngularGridlines): Use new tick label anchors,
    (getDrawOutlineWhenFilled): New method,
    (setDrawOutlineWhenFilled): Likewise,
    (getFillComposite): Likewise,
    (setFillComposite): Likewise,
    (getShapesVisible): Likewise,
    (setShapesVisible): Likewise,
    (equals): Updated for new fields.

2009-09-03  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/PiePlot.java
    (drawSimpleLabels): Make use of simpleLabelOffset attribute.

2009-09-01  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 2840132:
    * source/org/jfree/chart/renderer/AbstractXYItemRenderer.java
    (drawAnnotations): Set renderer index.

2009-08-31  David Gilbert  <david.gilbert@object-refinery.com>
