@@ -2,6 +2,13 @@
 
     Bug 2849731:
     * source/org/jfree/chart/DatasetUtilities.java
+    (iterateRangeBounds(XYDataste, boolean)): For IntervalXYDataset, include
+    regular value and account for nulls / Double.NaN.
+
+2009-09-10  David Gilbert  <david.gilbert@object-refinery.com>
+
+    Bug 2849731:
+    * source/org/jfree/chart/DatasetUtilities.java
     (iterateRangeBounds(CategoryDataset, boolean)): For IntervalCategoryDataset
     look at regular value, and account for nulls.
 
